ops/manifests/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        name: mongo
        app: mongo
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 20m
            memory: 50Mi
        volumeMounts:
          - mountPath: "/data"
            name: mongodbvolume
      restartPolicy: Always
      volumes:
        - name: mongodbvolume
          persistentVolumeClaim:
            claimName: blinklocationclaim


status: {}
