ops/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blink-location
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: { HOST1 }
    http:
      paths:
      - backend:
          serviceName: web-svc
          servicePort: 80
